# mddb-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: _build_installer.py
src/mddbai/: __init__.py  engine.py
src/mddbai/_resources/: __init__.py
src/mddbai/_resources/hooks/: mddbai_pre_tool_use.py  mddbai_session_start.py  mddbai_stop.py  mddbai_user_prompt_submit.py
src/mddbai/_resources/skills/mddbai-consolidate/: SKILL.md
src/mddbai/_resources/skills/mddbai-recall/: SKILL.md
src/mddbai/_resources/skills/mddbai-write/: SKILL.md
src/mddbai/api/: rest.py
src/mddbai/brain/: agent_guide.py  branch_overflow.py  clusters.py  drawer_cache.py  drawer_summary.py  folder_summary.py  homeostasis.py  lexicon_extract.py  lexicon_store.py  navigation.py  nutrient_extract.py  palace_init.py  palace_root.py  registry.py  related.py  sleep.py  tutorial.py  utterance.py
src/mddbai/cli/: _placement.py  _strict.py  integration.py  main.py
src/mddbai/codec/: frontmatter.py  section_meta.py  sections.py  splitter.py
src/mddbai/core/: clock.py  config.py  errors.py  hashing.py  logging.py  types.py  ulid.py  validation.py
src/mddbai/obs/: doctor.py  metrics.py
src/mddbai/sdk/: client.py
src/mddbai/storage/: atomic.py  drawer_engine.py  drawer_store.py  locks.py  streams.py  transactional.py
